--- a/site/index.html
+++ b/site/index.html
@@ -13,6 +13,7 @@
 			<div class="card backcard">a</div>
 		</div>
 		<div id="enemyPlayer"></div>
+		<div id="enemygems"></div>
 		<div id="theMap">
 			<div id="enemyTeam">	
 				<div class="card">
